@@ -75,12 +75,6 @@ def writeScript( testcase, filename, lang, rtconfig, plat, loc ):
         w.add( 'CONFIGDIR = '+repr(configdirs) )
 
         w.add( '',
-               'tmpL = '+repr(configdirs),
-               'if "PATH" in os.environ:',
-               '    tmpL += os.environ["PATH"].split(":")',
-               'os.environ["PATH"] = ":".join( tmpL )' )
-
-        w.add( '',
                'diff_exit_status = '+str(DIFF_EXIT_STATUS),
                'skip_exit_status = '+str(SKIP_EXIT_STATUS),
                'opt_analyze = "--execute-analysis-sections" in sys.argv[1:]' )
@@ -181,11 +175,6 @@ def writeScript( testcase, filename, lang, rtconfig, plat, loc ):
         w.add( 'KEYWORDS="'+kwds+'"' )
 
         w.add( 'CONFIGDIR="'+':'.join( configdirs )+'"' )
-
-        w.add( '',
-               'tmp=',
-               '[ "x$PATH" = "x" ] || tmp=":$PATH"',
-               'export PATH="'+':'.join(configdirs)+'$tmp"' )
 
         w.add( '',
                'diff_exit_status='+str(DIFF_EXIT_STATUS),
